# josh-sync

./: Cargo.toml  README.md  josh-sync.example.toml
.github/workflows/: rustc-pull.yml  test.yml
src/: config.rs  josh.rs  lib.rs  sync.rs  utils.rs
